# NewBlashPlayer

./: .gitignore
Examples/Android/NewBlashPlayer/: settings.gradle
Examples/Android/NewBlashPlayer/app/: build.gradle
Examples/Android/NewBlashPlayer/app/src/androidTest/java/com/ccsu/newblashplayer/: ExampleInstrumentedTest.java
Examples/Android/NewBlashPlayer/app/src/main/: AndroidManifest.xml
Examples/Android/NewBlashPlayer/app/src/main/java/com/ccsu/newblashplayer/: MainActivity.java
Examples/Android/NewBlashPlayer/app/src/main/res/layout/: activity_main.xml
Examples/Android/NewBlashPlayer/app/src/main/res/values/: strings.xml
Examples/Android/NewBlashPlayer/app/src/test/java/com/ccsu/newblashplayer/: ExampleUnitTest.java
Examples/Android/NewBlashPlayer/gradle/wrapper/: gradle-wrapper.properties
Examples/iOS/NewBlashPlayer/NewBlashPlayer/: AppDelegate.h  AppDelegate.m  NBNavigationViewController.h  NBNavigationViewController.m  NBPlayerViewController.h  NBPlayerViewController.m  NBPlayerViewController.xib  RootViewController.h  RootViewController.m  main.mm
Examples/iOS/NewBlashPlayer/NewBlashPlayer.xcodeproj/: project.pbxproj
Examples/iOS/NewBlashPlayer/NewBlashPlayer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Examples/iOS/NewBlashPlayer/NewBlashPlayer/Base.lproj/: Main.storyboard
NBMediaPlayer/include/: NBCondition.h  NBList.h  NBMacros.h  NBMap.h  NBMediaPlayer.h  NBMutex.h  NBRBTree.h  NBRendererInfo.h  NBSet.h  NBSharedBuffer.h  NBString.h  NBTimedEventQueue.h
NBMediaPlayer/platform/Android/: CMakeLists.txt  build.gradle
NBMediaPlayer/platform/Android/src/androidTest/java/com/ccsu/androidnbmediaplayer/: ExampleInstrumentedTest.java
NBMediaPlayer/platform/Android/src/main/: AndroidManifest.xml
NBMediaPlayer/platform/Android/src/main/java/com/ccsu/nbmediaplayer/: NBAVPlayer.java
NBMediaPlayer/platform/Android/src/main/jni/: NBAVPlayer_JNI.cpp  NBRenderContext.cpp
NBMediaPlayer/platform/Android/src/main/jni/NBMediaPlayer/: CMakeLists.txt
NBMediaPlayer/platform/Android/src/main/res/values/: strings.xml
NBMediaPlayer/platform/Android/src/test/java/com/ccsu/androidnbmediaplayer/: ExampleUnitTest.java
NBMediaPlayer/platform/iOS/NBMediaPlayer.xcodeproj/: project.pbxproj
NBMediaPlayer/platform/iOS/interface/: NBAVPlayer.h  NBAVPlayer.mm  NBGLView.h  NBGLView.mm
NBMediaPlayer/src/: NBAVPacket.cpp  NBAVPacket.h  NBAudioFrame.cpp  NBAudioFrame.h  NBAudioPlayer.cpp  NBAudioPlayer.h  NBBufferQueue.cpp  NBBufferQueue.h  NBClockManager.cpp  NBClockManager.h  NBMediaBuffer.cpp  NBMediaBuffer.h  NBMediaPlayer.cpp  NBVideoFrame.cpp  NBVideoFrame.h
NBMediaPlayer/src/DownloadEngine/include/: common_def.h  download_engine.h
NBMediaPlayer/src/DownloadEngine/src/: DEDownloadEngine.cpp
NBMediaPlayer/src/DownloadEngine/src/common/: DEInternal.h  DELooper.h  DELooperEV.cpp  DELooperUV.cpp
NBMediaPlayer/src/DownloadEngine/src/filesystem/: DEDataManager.cpp  DEDataManager.h  DEMemDataManager.cpp  DEMemDataManager.h
NBMediaPlayer/src/DownloadEngine/src/network/: DENetwork.cpp  DENetwork.h  DESocketHelper.cpp  DESocketHelper.h
NBMediaPlayer/src/DownloadEngine/src/task/: DEBaseTask.cpp  DEBaseTask.h  DECurlHttpTask.cpp  DECurlHttpTask.h  DECurlTask.cpp  DECurlTask.h
NBMediaPlayer/src/DownloadEngine/src/utils/: DEAny.h  DELRUCache.h
NBMediaPlayer/src/datasource/: NBBeastSource.cpp  NBBeastSource.h  NBDataSource.cpp  NBDataSource.h  NBFFmpegSource.cpp  NBFFmpegSource.h
NBMediaPlayer/src/datasource/ffmpeg/: config.h
NBMediaPlayer/src/datasource/ffmpeg/libavcodec/: blockdsp.h  cabac_functions.h  decode.c  decode.h  error_resilience.h  fdctdsp.h  get_bits.h  golomb.h  h2645_parse.h  h264_mvpred.h  h264_ps.c  h264_ps.h  h264_slice.c  h264dec.c  hevc_ps.h  hevcdec.h  idctdsp.h  internal.h  me_cmp.h  motion_est.h  mpegpicture.h  mpegutils.h  mpegvideo.h  mpegvideoencdsp.h  parser.h  pixblockdsp.h  profiles.h  raw.h  thread.h  videotoolbox.c
NBMediaPlayer/src/datasource/ffmpeg/libavformat/: asf.h  audiointerleave.h  avio.c  dv.h  file.c  http.c  httpauth.c  id3v2.h  internal.h  metadata.h  mpegts.h  protocols.c  rdt.c  rdt.h  rm.h  rtp.c  rtpdec.c  rtpdec.h  rtpdec_ac3.c  rtpdec_amr.c  rtpdec_g726.c  rtpdec_h261.c  rtpdec_h263.c  rtpdec_h263_rfc2190.c  rtpdec_h264.c  rtpdec_hevc.c  rtpdec_ilbc.c  rtpdec_jpeg.c  rtpdec_latm.c  rtpdec_qt.c  rtpdec_vp9.c  rtpdec_xiph.c  rtpenc.h  rtpenc_chain.h  rtpproto.c  rtsp.c  rtsp.h  rtspdec.c  srtpproto.c  tcp.c  (+3 more)
NBMediaPlayer/src/datasource/ffmpeg/libavutil/: internal.h  intmath.h  libm.h  timer.h
NBMediaPlayer/src/datasource/ffmpeg/zzip/: _config.h
NBMediaPlayer/src/decoder/: NBFFmpegADecoder.cpp  NBFFmpegADecoder.h  NBFFmpegMediaTrack.cpp  NBFFmpegMediaTrack.h  NBFFmpegVDecoder.cpp  NBFFmpegVDecoder.h  NBMediaCodecVDecoder.cpp  NBMediaCodecVDecoder.h  NBMediaDecoder.cpp  NBMediaDecoder.h  NBMediaSource.cpp  NBMediaSource.h  NBVideoToolboxDecoder.cpp  NBVideoToolboxDecoder.h
NBMediaPlayer/src/extractor/: NBFFmpegExtractor.cpp  NBFFmpegExtractor.h  NBMediaExtractor.cpp  NBMediaExtractor.h
NBMediaPlayer/src/foundation/: NBAtomic.cpp  NBAtomic.h  NBFoundation.cpp  NBFoundation.h  NBMetaData.cpp  NBMetaData.h  NBRBTree.cpp  NBSharedBuffer.cpp  NBString.cpp  NBTimedEventQueue.cpp
NBMediaPlayer/src/renderer/: NBALAudioRenderer.cpp  NBALAudioRenderer.h  NBCVOpenGLESRenderer.cpp  NBCVOpenGLESRenderer.h  NBGLShaderUtils.cpp  NBGLShaderUtils.h  NBGLVideoRenderer.cpp  NBGLVideoRenderer.h  NBGLYUV420PRenderer.cpp  NBGLYUV420PRenderer.h  NBMediaCodecVRenderer.cpp  NBMediaCodecVRenderer.h  NBVideoRenderer.cpp  NBVideoRenderer.h
